Added some small documentation on how to run the WAR, as well as some notes on some small revisions to whisk